# aoc22_d19_mineral_collection

./: Cargo.toml  output.txt
src/: blueprint.rs  main.rs  material.rs  mineral.rs  pack.rs  simulation.rs
src/blueprint/: parse.rs
src/simulation/: error.rs
