[package]
name = "mineral_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
thiserror = "1.0"
strum = "0.24"
strum_macros = "0.24"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.11"

